Converting slides for lecture one to model of SoC by deletion of information about shared repository model

--- a/course-materials/_slides/u1-d03-toolkit-git/u1-d03-toolkit-git.html
+++ b/course-materials/_slides/u1-d03-toolkit-git/u1-d03-toolkit-git.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="author" content="datasciencebox.org" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
     <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
@@ -111,30 +111,6 @@ class: middle
 ## Why do we need version control?
 
 &lt;img src="img/phd_comics_vc.gif" width="35%" style="display: block; margin: auto;" /&gt;
-
----
-
-## How will we use Git and GitHub?
-
-&lt;img src="img/whole-game-01.png" width="100%" style="display: block; margin: auto;" /&gt;
-
----
-
-## How will we use Git and GitHub?
-
-&lt;img src="img/whole-game-02.png" width="100%" style="display: block; margin: auto;" /&gt;
-
----
-
-## How will we use Git and GitHub?
-
-&lt;img src="img/whole-game-03.png" width="100%" style="display: block; margin: auto;" /&gt;
-
----
-
-## How will we use Git and GitHub?
-
-&lt;img src="img/whole-game-04.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
