--- a/course-materials/_slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/course-materials/_slides/u1-d01-welcome/u1-d01-welcome.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="author" content="datasciencebox.org" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
     <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
@@ -44,7 +44,7 @@ layout: true
 
 
 ```
-## [1] '0.25'
+## [1] '0.28'
 ```
 
 class: middle
