Course operation update: replacing all with GitHub

--- a/course-materials/_slides/u1-d03-toolkit-git/u1-d03-toolkit-git.html
+++ b/course-materials/_slides/u1-d03-toolkit-git/u1-d03-toolkit-git.html
@@ -51,11 +51,7 @@ layout: true
 .pull-left[
 ### .gray[Course operation]
 .gray[
-- introds.org
-- Learn
-- Zoom
-- Teams
-- Piazza
+- GitHub
 ]
 ]
 .pull-right[
